[package]
name = "ve_shader"
version = "0.1.2"
authors = ["Michael Lohr <michael@lohr-ffb.de>", "Shemnei"]
description = "This utility compiles a custom GLSL shader format to the SPIR-V format using shader-c."
edition = "2018"
readme = "README.md"
repository = "https://github.com/michidk/ve-shader"
license = "MIT"
keywords = ["gamedev", "graphics", "shader"]
categories = ["command-line-utilities", "compilers"]


[dependencies]
structopt = "0.3.21"
shaderc = "0.6.1"
regex = "1.4.3"
glob = "0.3.0"
thiserror = "1.0.23"
log = "0.4.14"
env_logger = "0.8.2"
